# Blender-mcp-rw

./: .gitignore  README.md  final_plan.md
blendermcp-studio/: package.json  pnpm-lock.yaml
blendermcp-studio/addons/: blender-mcp-realworks
blendermcp-studio/apps/desktop/: package.json  vite.config.ts
blendermcp-studio/apps/desktop/src/: App.tsx  index.css
blendermcp-studio/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
blendermcp-studio/apps/desktop/src-tauri/capabilities/: default.json
blendermcp-studio/apps/desktop/src-tauri/src/: lib.rs  main.rs
blendermcp-studio/apps/desktop/src-tauri/src/blender/: manager.rs  protocol.rs
blendermcp-studio/apps/desktop/src-tauri/src/commands/: blender.rs  mod.rs  settings.rs  sidecar.rs
blendermcp-studio/apps/desktop/src-tauri/src/db/: mod.rs
blendermcp-studio/apps/desktop/src-tauri/src/db/migrations/: 001_initial.sql
blendermcp-studio/apps/desktop/src-tauri/src/sidecar/: manager.rs
blendermcp-studio/apps/desktop/src/components/chat/: ChatWindow.tsx  MessageBubble.tsx  ToolCallCard.tsx  TypingIndicator.tsx
blendermcp-studio/apps/desktop/src/components/settings/: BlenderSettings.tsx  ProviderSettings.tsx
blendermcp-studio/apps/desktop/src/components/sidebar/: BlenderSessionList.tsx  ConversationList.tsx
blendermcp-studio/apps/desktop/src/hooks/: useWebSocket.ts
blendermcp-studio/apps/desktop/src/stores/: blenderStore.ts  chatStore.ts  settingsStore.ts
