[package]
name = "blendermcp-studio"
version = "0.1.0"
description = "BlenderMCP Studio — AI Blender controller"
authors = ["RW Studios"]
edition = "2021"

[lib]
name = "blendermcp_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
